--- a/pyVerein/finance/templates/finance/costobject/edit.html
+++ b/pyVerein/finance/templates/finance/costobject/edit.html
@@ -67,5 +67,6 @@
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
+        $('#form').exitOnEsc("{% url 'finance:costobject_detail' pk=costobject.pk %}");
     </script>
 {% endblock %}
