--- a/pyVerein/finance/templates/finance/creditor/edit.html
+++ b/pyVerein/finance/templates/finance/creditor/edit.html
@@ -26,10 +26,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-3 field-title">{% trans 'Creditor name' %}</div>
-                        <div class="col-md-5 value">
-                            {% render_field form.name class+="form-control" %}
-                            <span class="help-block with-errors"></span>
-                        </div>
+                        <div class="col-md-5 value">{% render_field form.name class+="form-control" autofocus="autofocus"%}<span class="help-block with-errors"></span></div>
                     </div>
 
                     <div class="form-group">
@@ -64,5 +61,6 @@
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
+        $('#form').exitOnEsc("{% url 'finance:creditor_detail' pk=creditor.pk %}");
     </script>
 {% endblock %}
