--- a/pyVerein/finance/templates/finance/debitor/edit.html
+++ b/pyVerein/finance/templates/finance/debitor/edit.html
@@ -26,9 +26,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-3 field-title">{% trans 'Debitor name' %}</div>
-                        <div class="col-md-5 value">{% render_field form.name class+="form-control" %}
-                            <span class="help-block with-errors"></span>
-                        </div>
+                        <div class="col-md-5 value">{% render_field form.name class+="form-control" autofocus="autofocus" %}<span class="help-block with-errors"></span></div>
                     </div>
 
                     <div class="form-group">
@@ -63,5 +61,6 @@
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
+        $('#form').exitOnEsc("{% url 'finance:debitor_detail' pk=debitor.pk %}");
     </script>
 {% endblock %}
