--- a/pyVerein/finance/templates/finance/impersonal/create.html
+++ b/pyVerein/finance/templates/finance/impersonal/create.html
@@ -36,7 +36,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-3 field-title">{% trans 'Impersonal account number' %}</div>
-                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" data-next="id_name" %}<span class="help-block with-errors"></span></div>
+                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" data-next="id_name" autofocus="autofocus" %}<span class="help-block with-errors"></span></div>
                         
                         </div>
                         <div class="form-group">
@@ -78,5 +78,6 @@
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
+        $('#form').exitOnEsc("{% url 'finance:impersonal_list' %}");
     </script>
 {% endblock %}
