--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -28,89 +28,7 @@
 </head>
 
 <body class="mdc-typography">
-    <aside class="mdc-drawer mdc-drawer--temporary mdc-typography main-navigation">
-        <nav class="mdc-drawer__drawer">
-            <header class="mdc-drawer__header">
-                <div class="mdc-drawer__header-content mdc-theme--on-primary mdc-theme--primary-bg">
-                    <divc class="logo">
-                        <a href="{% url 'app:index' %}" class="site_title">
-                            <img src="{% static 'app/images/logo_white.png' %}" />
-                        </a>
-                    </div>
-                    <a href="{% url  'logout' %}" class="mdc-fab mdc-fab--mini mdc-fab__logout" aria-label="{% trans 'Sign out' %}">
-                        <span class="mdc-fab__icon fa fa-power-off"></span>
-                    </a>                 
-                </div>
-            </header>
-            <div class="mdc-drawer__content">
-                <div class="mdc-list-group">
-                    <h3 class="mdc-list-group__subheader">{% trans 'Members' %}</h3>
-                    <ul class="mdc-list">
-                        <li class="mdc-list-item {% base_url_class 'members:list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'members:list' %}">
-                                <span class="mdc-list-item__graphic fa fa-users" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Members' %}</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="mdc-list-divider">
-                <div class="mdc-list-group">
-                    <h3 class="mdc-list-group__subheader">{% trans 'Finance' %}</h3>
-                    <ul class="mdc-list">
-                        <li class="mdc-list-item {% base_url_class 'finance:transaction_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:transaction_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-file-alt" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Transactions' %}</span>
-                            </a>
-                        </li>
-                        <li class="mdc-list-item {% base_url_class 'finance:debitor_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:debitor_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-user-plus" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Debitors' %}</span>
-                            </a>
-                        </li>
-                        <li class="mdc-list-item {% base_url_class 'finance:creditor_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:creditor_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-user-times" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Creditors' %}</span>
-                            </a>
-                        </li>
-                        <li class="mdc-list-item {% base_url_class 'finance:impersonal_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:impersonal_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-box" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Impersonal' %}</span>
-                            </a>
-                        </li>
-                        <li class="mdc-list-item {% base_url_class 'finance:costcenter_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:costcenter_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-money-bill-alt" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Cost centers' %}</span>
-                            </a>
-                        </li>
-                        <li class="mdc-list-item {% base_url_class 'finance:costobject_list' 'mdc-list-item--activated'%}">
-                            <a href="{% url 'finance:costobject_list' %}">
-                                <span class="mdc-list-item__graphic fa fa-money-bill-alt" aria-hidden="true"></span>
-                                <span class="mdc-list-item__text">{% trans 'Cost objects' %}</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <hr class="mdc-list-divider">
-                <div class="mdc-list-group">
-                        <h3 class="mdc-list-group__subheader">{% trans 'User' %}</h3>
-                        <ul class="mdc-list">
-                            <li class="mdc-list-item">
-                                <a href="#">
-                                    <span class="mdc-list-item__graphic fa fa-user" aria-hidden="true"></span>
-                                    <span class="mdc-list-item__text">{% trans 'Profile' %}</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-            </div>
-        </nav>
-    </aside>
+    {% include "app/_drawer.html" %}
     <div class="main">
         <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
             <div class="mdc-top-app-bar__row">
@@ -126,27 +44,7 @@
         <section class="main mdc-top-app-bar--fixed-adjust">
             {% block content %} {% endblock %}
         </section>
-        <aside class="mdc-dialog" id="attribution-dialog">
-            <div class="mdc-dialog__surface">
-                <header class="mdc-dialog__header">
-                    <h2 id="mdc-dialog-with-list-label" class="mdc-dialog__header__title">
-                        {% trans 'Attributions' %}
-                    </h2>
-                </header>
-                <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
-                    <p>
-                        <h3>
-                            Standard Avatar-Image
-                        </h3>
-                        <span class="mdc-typography--overline">Free avatars flat icons</span> by Dmitriy Bondarchuk<br />
-                        Published under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" >CC BY-NC-ND 4.0</a> at <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons">behance.net</a>
-                    </p>
-                </section>
-                <footer class="mdc-dialog__footer">
-                    <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel mdc-button--outlined">{% trans 'Close' %}</button>
-                </footer>
-            </div>
-        </aside>
+        {% include "app/_attributions.html" %}
         <footer id="page-footer">
             pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="javascript:showAttributions();" class="mdc-theme--on-primary">{% trans 'Attributions' %}</a>
         </footer>
