--- a/pyVerein/app/templates/registration/login.html
+++ b/pyVerein/app/templates/registration/login.html
@@ -69,27 +69,7 @@
                 </form>
             </div>
         </section>
-        <aside class="mdc-dialog" id="attribution-dialog">
-            <div class="mdc-dialog__surface">
-                <header class="mdc-dialog__header">
-                    <h2 id="mdc-dialog-with-list-label" class="mdc-dialog__header__title">
-                        {% trans 'Attributions' %}
-                    </h2>
-                </header>
-                <section id="mdc-dialog-with-list-description" class="mdc-dialog__body mdc-dialog__body--scrollable">
-                    <p>
-                        <h3>
-                            Standard Avatar-Image
-                        </h3>
-                        <span class="mdc-typography--overline">Free avatars flat icons</span> by Dmitriy Bondarchuk<br />
-                        Published under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" >CC BY-NC-ND 4.0</a> at <a href="https://www.behance.net/gallery/47035405/Free-avatars-flat-icons">behance.net</a>
-                    </p>
-                </section>
-                <footer class="mdc-dialog__footer">
-                    <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel mdc-button--outlined">{% trans 'Close' %}</button>
-                </footer>
-            </div>
-        </aside>
+        {% include "app/_attributions.html" %}
         <footer id="page-footer">
             pyVerein by Jannik Heuer&nbsp;|&nbsp;<a href="javascript:showAttributions();" class="mdc-theme--on-primary">{% trans 'Attributions' %}</a>
         </footer>
