--- a/pyVerein/app/templates/registration/login.html
+++ b/pyVerein/app/templates/registration/login.html
@@ -46,7 +46,7 @@
                     {% endif %}
                 {% endif %}
 
-                <form role="form" method="post" action="{% url 'login' %}" class="form-horizontal">
+                <form role="form" method="post" action="{% url 'login' %}" class="form-login">
                     {% csrf_token %}
                     <div class="mdc-text-field">
                         <input type="text" id="username" name="username" class="mdc-text-field__input">
