--- a/pyVerein/members/templates/members/member_list.html
+++ b/pyVerein/members/templates/members/member_list.html
@@ -26,6 +26,9 @@
             </tr>
         </thead>
     </table>
+    <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute" aria-label="">
+        <i class="mdc-fab__icon fa fa-plus"></i>
+    </a>
 {% endblock %}
 
 {% block foot %}
